// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BotaoMenu.styles BotaoMenuIcone DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  border-radius: 8px;
  border: none;
  align-items: center;
  justify-content: center;
  background: transparent;
  padding: 8px;
  opacity: 1;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.7;
}

.c0:active {
  opacity: 1;
}

.c0:focus-visible {
  outline: unset;
  border: 2px solid #999E9C;
}

<div>
  <button
    class="c0 "
    cor="#5D615F"
  >
    <svg />
  </button>
</div>
`;

exports[`BotaoMenu.styles BotaoMenuTexto DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  flex: 1;
  width: 160px;
  border-radius: 8px;
  border: 2px solid #F2F2F2;
  background: none;
  align-items: center;
  gap: 8px;
  flex-direction: row;
  justify-content: flex-start;
  padding: 4px 8px;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.7;
}

.c0:active {
  opacity: 1;
}

.c0:disabled {
  opacity: 0.7;
  cursor: default;
}

.c0:focus-visible {
  outline: 2px solid #999E9C;
  border-radius: 8px;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`BotaoMenu.styles ContainerBotaoMenu DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  position: relative;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`BotaoMenu.styles ContainerSuspenso DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  position: absolute;
  flex-direction: column;
  min-width: 250px;
  max-width: 300px;
  top: 100%;
  right: 50%;
  transform: translateX(50%);
  z-index: 1;
  margin-top: 8px;
  background: #FFFFFF;
  padding: 24px;
  border-radius: 16px;
  box-shadow: 0px 8px 24px 0px rgba(67, 70, 69, 0.35);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`BotaoMenu.styles IconeBotao DEVE ser igual ao snapshot 1`] = `
<div>
  <svg
    class=""
    data-file-name="SvgIChevron"
    fill="#5D615F"
    height="24"
    style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; transform: rotate(0deg);"
    width="24"
  />
</div>
`;

exports[`BotaoMenu.styles IconeBotao DEVE ser igual ao snapshot 2`] = `
<div>
  <svg
    class=""
    data-file-name="SvgIChevron"
    fill="#5D615F"
    height="24"
    style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; transform: rotate(0deg);"
    width="24"
  />
</div>
`;

exports[`BotaoMenu.styles TextoBotao DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-weight: 400;
  font-size: 12px;
  line-height: normal;
  font-family: AvertaStd-Semibold;
  color: #5D615F;
  text-align: start;
  cursor: pointer;
  text-transform: none;
}

.c1 {
  text-overflow: ellipsis;
}

<div>
  <span
    class="c0 c1"
    cor="#5D615F"
    cursor="pointer"
    estilo="semibold"
    tamanho="12"
  />
</div>
`;

exports[`BotaoMenu.styles TextoTitulo DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-weight: 400;
  font-size: 16px;
  line-height: normal;
  font-family: AvertaStd-Semibold;
  color: #5D615F;
  text-align: start;
  cursor: text;
  text-transform: none;
}

.c1 {
  margin-bottom: 24px;
}

<div>
  <span
    class="c0 c1"
    cor="#5D615F"
    estilo="semibold"
    tamanho="16"
  />
</div>
`;
